# my-python-tool

./: .gitignore  README.md  pyproject.toml
src/my_python_tool/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
