[project]
name = "my-python-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James U", email = "tenseventyseven@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
my-python-tool = "my_python_tool.cli:app"